image in cinema form bug fixed